--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
   "author": "David Nascimento",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.16.3"
+    "body-parser": "^1.18.3",
+    "express": "^4.16.3",
+    "morgan": "^1.9.0"
   },
   "devDependencies": {
     "eslint": "^5.4.0",
