change  server to index

--- a/package.json
+++ b/package.json
@@ -2,14 +2,11 @@
   "name": "mongostore-api",
   "version": "1.0.0",
   "description": "Mongo store API",
-  "main": "server.js",
-  "engines": {
-    "node": "8.11.3"
-  },
+  "main": "./src/index.js",
   "scripts": {
     "test": "test",
-    "start": "node src/server.js",
-    "nodemon": "nodemon ./src/server.js localhost 3000"
+    "start": "node src/index.js",
+    "nodemon": "nodemon ./src/index.js localhost 3000"
   },
   "keywords": [
     "node",
