--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "multer": "^1.3.1"
   },
   "devDependencies": {
+    "dumper.js": "^1.1.1",
     "eslint": "^5.4.0",
     "nodemon": "^1.18.3"
   }
