--- a/package.json
+++ b/package.json
@@ -4,9 +4,10 @@
   "description": "Mongo store API",
   "main": "./src/index.js",
   "scripts": {
-    "test": "test",
     "start": "node src/index.js",
-    "nodemon": "nodemon ./src/index.js localhost 3000"
+    "nodemon": "nodemon ./src/index.js localhost 3000",
+    "test": "jest src/tests",
+    "coverage": "jest --collectCoverageFrom=src/tests/**.js --coverage src"
   },
   "keywords": [
     "node",
@@ -27,6 +28,8 @@
   "devDependencies": {
     "dumper.js": "^1.1.1",
     "eslint": "^5.4.0",
+    "eslint-plugin-jest": "^21.22.0",
+    "jest": "^23.6.0",
     "nodemon": "^1.18.3"
   }
 }
